--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
 
     - name: Checkout Code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Use Node.js 16.16.0
       uses: actions/setup-node@v3
