--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,5 @@ jobs:
         node-version: 16.16.0
         cache: 'npm'
 
-    - name: Install Dependencies
-      run: yarn install
-
-    - name: Build Frontend
-      run: yarn build
+    - run: yarn install
+    - run: yarn build
