--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,4 @@ jobs:
         node-version: 16.16.0
         cache: 'npm'
 
-    - run: yarn install
-    - run: yarn build
+    - run: yarn install && yarn build
