--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         node-version: 16.16.0
         cache: 'yarn'
 
-    - run: yarn install && yarn build
+    - run: yarn install --force && yarn build
