--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,5 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.16.0
-        cache: 'yarn'
-
-    - run: yarn install --force && yarn build
+    - run: yarn install --verbose
+    - run: yarn build --verbose
