--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         cache: 'yarn'
 
     - name: Install Dependencies
-    - run: yarn install
+      run: yarn install
 
     - name: Build Frontend
-    - run: yarn build
+      run: yarn build
