--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Checkout Code
       uses: actions/checkout@v3
-    
+
     - name: Use Node.js 16.16.0
       uses: actions/setup-node@v3
       with:
@@ -27,3 +27,18 @@ jobs:
 
     - name: Build Frontend
       run: yarn build
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and Push Image
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: ccaspanello/todo-frontend:latest
