--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       run: yarn install
 
     - name: Build Frontend
-      run: yarn build
+      run: yarn build && ls -lah
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -36,6 +36,9 @@ jobs:
 #      with:
 #        username: ${{ secrets.DOCKERHUB_USERNAME }}
 #        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: List Dir
+      run: ls -lah
 
     - name: Build and Push Image
       uses: docker/build-push-action@v3
