--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,5 @@ jobs:
       uses: docker/build-push-action@v3
       with:
 #        push: true
+        context: .
         tags: ccaspanello/todo-frontend:latest
