[WIP] Working Build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
     - name: Build and Push Image
       uses: docker/build-push-action@v3
       with:
-#        push: true
+        push: true
         context: .
         tags: ccaspanello/todo-frontend:latest
