--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    # Build Frontend
     - name: Use Node.js 16.16.0
       uses: actions/setup-node@v3
       with:
@@ -28,21 +29,24 @@ jobs:
     - name: Build Frontend
       run: yarn build && ls -lah
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-#    - name: Login to DockerHub
-#      uses: docker/login-action@v2
-#      with:
-#        username: ${{ secrets.DOCKERHUB_USERNAME }}
-#        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: List Dir
-      run: ls -lah
-
-    - name: Build and Push Image
-      uses: docker/build-push-action@v3
+    # Build & Publish Docker Container
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        push: true
-        context: .
-        tags: ccaspanello/todo-frontend:latest
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push docker image to Amazon ECR
+      env:
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: todo
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
