--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,11 +47,13 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: Set env
+      run: echo "IMAGE_TAG=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_ENV
+
     - name: Build, tag, and push docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         REPOSITORY: todo-frontend
-        IMAGE_TAG: main
       run: |
         DOCKER_BUILDKIT=1 docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
