--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,17 +58,17 @@ jobs:
         DOCKER_BUILDKIT=1 docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-    - name: Install Octopus CLI
-      uses: OctopusDeploy/install-octopus-cli-action@v1.1.8
-      with:
-        version: latest
-
-    - name: Create and deploy release
-      uses: OctopusDeploy/create-release-action@v1.1.1
-      with:
-        api_key: ${{ secrets.OCTOPUSSERVERAPIKEY }}
-        server: ${{ secrets.OCTOPUSSERVERURL }}
+#    - name: Install Octopus CLI
+#      uses: OctopusDeploy/install-octopus-cli-action@v1.1.8
+#      with:
+#        version: latest
+#
+#    - name: Create and deploy release
+#      uses: OctopusDeploy/create-release-action@v1.1.1
+#      with:
+#        api_key: ${{ secrets.OCTOPUSSERVERAPIKEY }}
+#        server: ${{ secrets.OCTOPUSSERVERURL }}
 #        space: ${{ secrets.OCTOPUSSERVER_SPACE }}
-        project: "TODO Frontend SNAPSHOT"
-        deploy_to: "DEV"
-        progress: true
+#        project: "TODO Frontend SNAPSHOT"
+#        deploy_to: "DEV"
+#        progress: true
