--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,10 +30,12 @@ jobs:
     - name: Roll Version
       run: |
         releaseVersion=$(node -e "console.log(require('./package.json').version.replace('-SNAPSHOT',''));")
-        yarn version $releaseVersion
+        yarn version --new-version $releaseVersion
         git config --global user.name 'Service Account'
         git config --global user.email 'ccaspanello@gmail.com'
+        git add package.json
         git commit -am "[RELEASE] Setting release version to: $releaseVersion"
         git push
-        yarn version ${{ github.event.inputs.nextSnapshotVersion }}
+        yarn version --new-version ${{ github.event.inputs.nextSnapshotVersion }}
+        git add package.json
         git commit -am "[RELEASE] Setting SNAPSHOT version to: $releaseVersion"
