--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-frontend",
-  "version": "1.0.1",
+  "version": "1.0.1-SNAPSHOT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
