--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: Checkout Code
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.BUILD_GUY_PAT }}
 
     - name: Use Node.js 16.16.0
       uses: actions/setup-node@v3
